@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <object name="portal_directories" meta_type="CPS Directory Tool">
  <property name="title"></property>
- <object name="groups" meta_type="CPS Groups Directory"/>
- <object name="members" meta_type="CPS Members Directory"/>
- <object name="roles" meta_type="CPS Roles Directory"/>
+ <object name="groups" meta_type="CPS ZODB Directory"/>
+ <object name="members" meta_type="CPS ZODB Directory"/>
+ <object name="roles" meta_type="CPS ZODB Directory"/>
 </object>
