@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<object name="groups" meta_type="CPS Groups Directory">
+<object name="groups" meta_type="CPS ZODB Directory">
  <property name="title">label_groups</property>
  <property name="schema">groups</property>
  <property name="schema_search"></property>
@@ -16,6 +16,4 @@
   <element value="group"/>
  </property>
  <property name="is_hierarchical">False</property>
- <property name="members_field">members</property>
- <property name="subgroups_field">subgroups</property>
 </object>
