@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<object name="members" meta_type="CPS Members Directory">
+<object name="members" meta_type="CPS ZODB Directory">
  <property name="title">label_members</property>
  <property name="schema">members</property>
  <property name="schema_search">members_search</property>
@@ -20,6 +20,4 @@
  </property>
  <property name="is_hierarchical">False</property>
  <property name="password_field">password</property>
- <property name="roles_field">roles</property>
- <property name="groups_field">groups</property>
 </object>
