@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<object name="roles" meta_type="CPS Roles Directory">
+<object name="roles" meta_type="CPS ZODB Directory">
  <property name="title">label_roles</property>
  <property name="schema">roles</property>
  <property name="schema_search"></property>
@@ -16,5 +16,4 @@
   <element value="role"/>
  </property>
  <property name="is_hierarchical">False</property>
- <property name="members_field">members</property>
 </object>
