@@ -28,25 +28,6 @@
   <property name="vocabulary">members</property>
   <property name="size">7</property>
  </widget>
- <widget name="subgroups" meta_type="MultiSelect Widget">
-  <property name="fields">
-   <element value="subgroups"/>
-  </property>
-  <property name="label">label_subgroups</property>
-  <property name="label_edit">label_subgroups</property>
-  <property name="is_i18n">True</property>
-  <property name="hidden_layout_modes">
-   <element value="search"/>
-  </property>
-  <property name="hidden_readonly_layout_modes">
-   <element value="edit"/>
-   <element value="create"/>
-   <element value="view"/>
-  </property>
-  <property name="hidden_if_expr">not:context/hasSubGroupsSupport</property>
-  <property name="vocabulary">groups</property>
-  <property name="size">7</property>
- </widget>
  <table>
   <row>
    <cell name="group"/>
