@@ -5,7 +5,7 @@
  <required tool_id="MailHost"
            class="Products.MailHost.MailHost.MailHost"/>
  <required tool_id="acl_users"
-           class="Products.CPSUserFolder.UserFolderWithGroups.UserFolderWithGroups"/>
+           class="Products.CPSUserFolder.CPSUserFolder.CPSUserFolder"/>
  <required tool_id="caching_policy_manager"
            class="Products.CMFCore.CachingPolicyManager.CachingPolicyManager"/>
  <required tool_id="content_type_registry"
