@@ -1,5 +1,12 @@
 <?xml version="1.0"?>
-<object name="acl_users" meta_type="User Folder With Groups">
- <property name="encrypt_passwords">False</property>
- <property name="maxlistusers">250</property>
+<object name="acl_users" meta_type="CPS User Folder">
+ <property name="users_dir">members</property>
+ <property name="groups_dir">groups</property>
+ <property name="groups_members_field">members</property>
+ <property name="roles_dir">roles</property>
+ <property name="roles_members_field">members</property>
+ <property name="users_groups_field">groups</property>
+ <property name="users_login_field">id</property>
+ <property name="users_password_field">password</property>
+ <property name="users_roles_field">roles</property>
 </object>
