@@ -61,3 +61,4 @@ New internal features:
 - The CPSDefaultTestCase no longer installs and create CPSSharedCalendars
   unless you explicitly install CPSSharedCalendar with installProduct in your
   test.
+- Change the default profile to use a CPS User Folder and CPS ZODB Directories 
